--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
         Bookshop components are accessed using the bookshop tag,
         using the same syntax as the standard Jekyll include tag.
     -->
-    {% bookshop_include page content_blocks=page.content_blocks page_theme=page.page_theme %}
+    {% include page content_blocks=page.content_blocks page_theme=page.page_theme %}
 
     <div class="top" title="Top"><ion-icon name="arrow-up"></ion-icon></div>
 
