--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -75,3 +75,10 @@ layout: default
   {% include disqus-comments.html %}
 {% endif %}
 
+{% include newsletter.html 
+  newsletter_title=site.data.newsletter.newsletter_title
+  newsletter_description=site.data.newsletter.newsletter_description
+  newsletter_identifier=site.data.newsletter.newsletter_identifier
+  newsletter_button=site.data.newsletter.newsletter_button
+%}
+
