--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -1,10 +1,8 @@
 ---
 layout: default
 ---
-
 {% assign tag=page.tag | capitalize %}
-{% bookshop page-heading title=tag %}
-
+{% include page-heading.html title=tag %}
 <div class="container">
   <div class="row">
     <div class="col col-12">
@@ -60,9 +58,8 @@ layout: default
     </div>
   </div>
 </div>
-
-{% bookshop
-  newsletter newsletter_title=site.data.newsletter.newsletter_title
+{% include newsletter.html
+  newsletter_title=site.data.newsletter.newsletter_title
   newsletter_description=site.data.newsletter.newsletter_description
   newsletter_identifier=site.data.newsletter.newsletter_identifier
   newsletter_button=site.data.newsletter.newsletter_button
