Modified by www.SourceFiles.app

--- a/assets/main.css
+++ b/assets/main.css
@@ -3231,6 +3231,10 @@
     opacity: 1;
   }
 
+.c-project-card__info-wrap
+{
+	overflow: visible;
+}
   .c-project-card:hover .c-project-card__title {
     transform: none;
   }
