--- a/assets/main.css
+++ b/assets/main.css
@@ -3240,6 +3240,19 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .c-project-card__title {
+    bottom: 0;
+    transform: none;
+    transition: none;
+    opacity: 1;
+  }
+.c-project-card__info-wrap
+{
+	overflow: visible;
+}
+  .c-project-card:hover .c-project-card__title {
+    transform: none;
+  }
     .c-project-card:last-child {
         margin-bottom: 0;
     }
