--- a/assets/main.css
+++ b/assets/main.css
@@ -3342,7 +3342,7 @@
         font-size: 28px;
         line-height: 1.3;
         margin-bottom: 0;
-        transform: translate3d(0, 100%, 0);
+        /*transform: translate3d(0, 100%, 0);*/
     }
     .c-project-card__subtitle {
         font-size: 16px;
@@ -3356,7 +3356,7 @@
     .c-project-card__title,
     .c-project-card__subtitle {
         color: #fff;
-        opacity: 0;
+        opacity: 1;
         transition:
             transform 0.4s cubic-bezier(0.165, 0.85, 0.45, 1),
             opacity 0.4s cubic-bezier(0.165, 0.85, 0.45, 1);
