--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -10,23 +10,16 @@
             <h2 class="{{c}}__contact-title">{{ include.form_title }}</h2>
             <p class="{{c}}__contact-description">{{ include.form_description }}</p>
           </div>
-          <form class="{{c}}__form"
-            action="{{include.form_success_page}}"
-            method="POST">
+             <form id="my-form" class="{{c}}__form" action="https://formspree.io/f/xovlkdrj" method="POST">
             <input type="hidden" name="_to" value="{{include.form_submission_email}}">
             <div class="{{c}}__form-group">
-              <label class="{{c}}__form-label screen-reader-text" for="form-name">Your Name</label>
-              <input class="{{c}}__form-input" id="form-name" type="text" name="name" placeholder="Your name..." required>
-            </div>
-            <div class="{{c}}__form-group">
-              <label class="{{c}}__form-label screen-reader-text" for="form-email">Your Email</label>
-              <input class="{{c}}__form-input" id="form-email" type="email" name="_replyto" placeholder="Your email..."
-                required>
+              <label class="{{c}}__form-label screen-reader-text" for="form-email"> Din Email</label>
+              <input type="email" name="email" class="{{c}}__form-input" id="form-email"  placeholder="Mejladress..." required/>
             </div>
             <div class="{{c}}__form-group">
               <label class="{{c}}__form-label screen-reader-text" for="form-text">Your Message</label>
-              <textarea class="{{c}}__form-input" id="form-text" name="text" rows="9" placeholder="Your message..."
-                required></textarea>
+              <textarea rows="5" name="message" class="{{c}}__form-input" placeholder="Meddelande..." id="message" rows="9"  required
+                data-validation-required-message="Skriv ett meddelande." required></textarea>
             </div>
             <div class="{{c}}__form-group {{c}}__form-group--button">
               <button class="c-button c-button--primary c-button--large" type="submit">{{ include.form_button_text }}</button>
